Adicionado o endpoint de DELETE
